--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
 
         <div class="cont">
-            <a href="" class="logo"><span class="mark">H</span>ealth<span class="mark">C</span>are<span class="mark">M</span>ax</a>
+            <a href="" class="logo"><span class="mark">D</span>aily<span class="mark">C</span>are<span class="mark">A</span>ffirmations</a>
 
             <nav class="nav">
                 <ul>
@@ -96,8 +96,8 @@
 
                     <div class="box">
                         <h3><i class="fas fa-Guided meditations"></i>Guided meditation</h3>
-                        <p>Positvity fundamentum omnium success.</p>
-                                                                                 <p>Positivty fundamentum omnium success.</p>
+                        <p>Guided meditation is a practice where an experienced guide or facilitator leads individuals through a meditation session using spoken instructions. It is a form of meditation that is accessible to both beginners and experienced practitioners alike.</p>
+                                                                                 <p>The purpose of guided meditation is to assist individuals in achieving a state of deep relaxation, inner calm, and heightened awareness. It offers a structured framework for meditation, making it easier for individuals to stay present and focused throughout the practice</p>
                     </div>
 
                     <div class="box">
