--- a/Daily-Affirmations/index.html
+++ b/Daily-Affirmations/index.html
@@ -36,7 +36,7 @@
     <header>
 
         <div class="cont">
-            <a href="" class="logo"><span class="mark">H</span>ealth<span class="mark">C</span>are<span class="mark">M</span>ax</a>
+            <a href="" class="logo"><span class="mark">D</span>aily<span class="mark">C</span>are<span class="mark">A</span>ffirmations</a>
 
             <nav class="nav">
                 <ul>
