--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
 
         <div class="cont">
-            <a href="" class="logo"><span class="mark">D</span>aily<span class="mark">C</span>are<span class="mark">A</span>ffirmations</a>
+            <a href="" class="logo"><span class="mark">D</span>aily<span class="mark">A</span>ffirmations</a>
 
             <nav class="nav">
                 <ul>
@@ -90,7 +90,7 @@
                 <div class="col-md-6 content ">
                     <div class="box">
                             <h3><i class="fas fa-Positive Manifestations"></i>Positive Manifestations</h3>
-                        <p>Positvity fundamentum omnium success.</p>
+                        <p>Positive manifestations, also known as the law of attraction or manifesting, is the belief and practice that our thoughts, beliefs, and emotions can influence our reality and attract positive experiences and outcomes into our lives. It is based on the principle that like attracts like, meaning that focusing on positive thoughts and emotions can bring positive experiences and opportunities.</p>
                         <p>Positvity fundamentum omnium success.</p>
                     </div>
 
@@ -102,7 +102,7 @@
 
                     <div class="box">
                         <h3><i class="fas fa-Check-in"></i> Free Check-ins</h3>
-                        <p>Positivity fundamentum omnium success</p>
+                        <p>Shift your focus to your emotions. Allow yourself to tune in to your feelings and emotions without judgment. Notice if you're feeling happy, sad, anxious, stressed, or any other emotions. Acknowledge whatever arises without trying to change or suppress it.</p>
                         <p>Positivity fundamentum ominium success.</p>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
     <section class="Positivity_mindsets" id="Positivity_mindsets">
         <div class="cont">
 
-            <h1 class="heading"><span>''</span>Positivity_minsets<span>''</span></h1>
+            <h1 class="heading"><span>''</span>Positivity_mindsets<span>''</span></h1>
             <div class="box-cont">
 
                 <div class="box">
@@ -136,7 +136,6 @@
 
                     </a>
                     <div class="layer">
-                                        <h3>London Cmpous</h3>
                     </div>
 
                 </div>
@@ -349,7 +348,7 @@
                 <div class="box">
 
                     <a href="" class="logo blogo" style="text-align: center;"> <span>H</span>ealth<span>C</span>are<span>M</span>ax</a>
-                    <p style="text-align: center;">Add. :- Jemo <br> Infront of Noc Fuel Station <br>
+                    <p style="text-align: center;">Address :- Jemo <br> Infront of Noc Fuel Station <br>
                         Nifas Silk Lafto<br>
                         Addis Ababa Ethiopia <br>
                         Phone:- +251-911-345-6789 <br>
