--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="col-md-6 d-none d-md-block">
-                    <img src="img/About.svg" width="100%" alt="">
+                    <img src="img/About.svg.svg" width="100%" alt="">
                 </div>
             </div>
         </div>
@@ -178,22 +178,22 @@
 
         <div class="box-cont">
             <div class="box">
-                <p> Estne questae Positivus initium omnium successuum?</p>
-                                                                           <h3>Darmi Seyoum</h3>
+                <p>"I've been using DailyAffirmations.com for months now, and the impact it has had on my overall well-being is incredible. Their affirmations have helped me release self-limiting beliefs and step into my power. I feel more aligned, motivated, and ready to embrace all that life has to offer."</p>
+                                                                           <h3>Mark VaranVal</h3>
                 <span>14-June-2023</span>
                 <img src="img/Review -1.jpg" alt="">
             </div>
 
             <div class="box">
-                <p>L Estne questae Positivus initium omnium successuum??</p>
-                <h3>Mark VaranVal</h3>
+                <p>"DailyAffirmations.com is my daily dose of inspiration and motivation. Their affirmations help me stay focused, optimistic, and grateful. I've noticed a significant improvement in my mindset and overall happiness since incorporating their affirmations into my daily routine. Thank you for this amazing resource!"</p>
+                <h3>Daniella Queen</h3>
                 <span>04-June-2023</span>
                 <img src="img/Review - 2.jpg" alt="">
             </div>
 
             <div class="box">
-                <p> Estne questae Positivius initium omnium successuum?</p>
-                <h3>Bruce Banner</h3>
+                <p>"DailyAffirmations.com has given me the tools to create a positive mindset. The affirmations resonate deeply with me and have transformed the way I approach life. I now believe in myself and my abilities, and I'm grateful for the constant support and encouragement from their website." </p>
+                <h3>Kate Banner</h3>
                 <span>13-June-2023</span>
                 <img src="img/Review - 3.jpg" alt="">
             </div>
